test_regress/t/t_assert_disable_bad.out
%Error: t/t_assert_disable_bad.v:27:38: disable iff expression before property call and in its body is not legal
                                      : ... In instance t
   27 |    assert property (disable iff (val == 0) check(1, 1));
      |                                      ^~
%Error: Internal Error: t/t_assert_disable_bad.v:21:7: ../V3Ast.cpp:#: Adding to non-empty, non-list op2
   21 |       @(posedge clk)
      |       ^
